added navigation bar and h1 and h3> gi

--- a/index.html
+++ b/index.html
@@ -13,7 +13,16 @@
     <title>Reel and Meal</title>
 </head>
 <body>
+      <nav>
+    <div class="nav-wrapper">
+        <a href="#!" class="brand-logo"><i class="material-icons">movie</i>Reel and Meal</a>
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li><a href="favorites.html">Past Searches</a></li>
+      </ul>
+    </div>
+  </nav>
     <h1>Reel and Meal</h1>
+    <h3> Find the perfect meal for your reel</h3>
  <!--  Scripts-->
  <!-- Compiled and minified JavaScript -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
