--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
   </nav>
     <h1>Reel and Meal</h1>
     <h3> Find the perfect meal for your reel</h3>
+    <form>
+        <input type = "text">
+    </form>
+    <button> Get Meals </button>
+    <button> Or see your previous searches </button>
+    
+
+
  <!--  Scripts-->
  <!-- Compiled and minified JavaScript -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
