--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   
 </head>
 <body>
+
+<!--Navigation-->
       <nav>
     <div class="nav-wrapper">
         <a href="#!" class="brand-logo"><i class="material-icons">movie</i>Reel and Meal</a>
@@ -23,9 +25,11 @@
       </ul>
     </div>
   </nav>
+<!--Title and Description-->
     <h1>Reel and Meal</h1>
     <h3> <i class="material-icons">restaurant</i> Find the perfect meal for your reel</h3>
     <div class="row">
+<!--Form-->
       <form class="col s12">
         <div class="row">
           <div class="input-field col s6">
@@ -36,6 +40,28 @@
         </div>
       </form>
     </div>
+    <button>Get your Meals</button>
+
+<!--navigation-->
+    <div class="row">
+      <div class="col s12 m7">
+        <div class="card">
+          <div class="card-image">
+            <img src="images/sample-1.jpg">
+            <span class="card-title">Recipe Name</span>
+          </div>
+          <div class="card-content">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</p>
+          </div>
+          <div class="card-action">
+            <a href="#">See Full Recipe</a>
+          </div>
+        </div>
+      </div>
+    </div>
+              
+
+  
     
 
 
