--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
       </ul>
     </div>
   </nav>
+
+<section class ="search-container">
 <!--Title and Description-->
     <header>Reel and Meal</header>
     <h3> <i class="material-icons">restaurant</i> Find the perfect meal for your reel</h3>
@@ -41,10 +43,26 @@
         <button>Get your Meals</button>
       </form>
     </div>
+</section>
     
 <!--recipe card-->
-<div class="row" style="border: 1px red solid;"> 
-  <div id="recipe-1" class="col s12 m6">
+<div class="row"> 
+  <div id="recipe-1" class="col s12 m2">
+    <div class="card">
+      <div class="card-image">
+        <img class="recipe-image" src="">
+        <span class="card-title">Card Title</span>
+      </div>
+      <div class="card-content">
+        <p class="recipe-description">I am a very use effectively.</p>
+      </div>
+      <div class="card-action">
+        <a class="recipe-link" href="#">See Recipe</a>
+      </div>
+    </div>
+  </div>
+  
+  <div id="recipe-2" class="col s12 m2">
     <div class="card">
       <div class="card-image">
         <img class="recipe-image" src="">
@@ -58,8 +76,38 @@
       </div>
     </div>
   </div>
-  
-  <div id="recipe-1" class="col s12 m6">
+
+  <div id="recipe-3" class="col s12 m2">
+    <div class="card">
+      <div class="card-image">
+        <img class="recipe-image" src="">
+        <span class="card-title">Card Title</span>
+      </div>
+      <div class="card-content">
+        <p>I am a very use effectively.</p>
+      </div>
+      <div class="card-action">
+        <a class="recipe-link" href="#">See Recipe</a>
+      </div>
+    </div>
+  </div>
+
+  <div id="recipe-4" class="col s12 m2">
+    <div class="card">
+      <div class="card-image">
+        <img class="recipe-image" src="">
+        <span class="card-title">Card Title</span>
+      </div>
+      <div class="card-content">
+        <p>I am a very use effectively.</p>
+      </div>
+      <div class="card-action">
+        <a class="recipe-link" href="#">See Recipe</a>
+      </div>
+    </div>
+  </div>
+
+  <div id="recipe-5" class="col s12 m2">
     <div class="card">
       <div class="card-image">
         <img class="recipe-image" src="">
