--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
 </section>
     
-<!--recipe card-->
+<!--recipe card 1-->
 <div class="row"> 
   <div id="recipe-1" class="col s12 m2">
     <div class="card">
@@ -54,7 +54,8 @@
         <span class="card-title">Card Title</span>
       </div>
       <div class="card-content">
-        <p class="recipe-description">I am a very use effectively.</p>
+        <p class="card-title">Recipe Name</p>
+        <p class="recipe-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       </div>
       <div class="card-action">
         <a class="recipe-link" href="#">See Recipe</a>
@@ -62,6 +63,7 @@
     </div>
   </div>
   
+  <!--recipe card 2-->
   <div id="recipe-2" class="col s12 m2">
     <div class="card">
       <div class="card-image">
@@ -69,7 +71,8 @@
         <span class="card-title">Card Title</span>
       </div>
       <div class="card-content">
-        <p>I am a very use effectively.</p>
+        <p class="card-title">Recipe Name</p>
+        <p class="recipe-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       </div>
       <div class="card-action">
         <a class="recipe-link" href="#">See Recipe</a>
@@ -77,6 +80,7 @@
     </div>
   </div>
 
+  <!--recipe card 3-->
   <div id="recipe-3" class="col s12 m2">
     <div class="card">
       <div class="card-image">
@@ -84,7 +88,8 @@
         <span class="card-title">Card Title</span>
       </div>
       <div class="card-content">
-        <p>I am a very use effectively.</p>
+        <p class="card-title">Recipe Name</p>
+        <p class="recipe-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       </div>
       <div class="card-action">
         <a class="recipe-link" href="#">See Recipe</a>
@@ -92,6 +97,7 @@
     </div>
   </div>
 
+  <!--recipe card 4-->
   <div id="recipe-4" class="col s12 m2">
     <div class="card">
       <div class="card-image">
@@ -99,7 +105,8 @@
         <span class="card-title">Card Title</span>
       </div>
       <div class="card-content">
-        <p>I am a very use effectively.</p>
+        <p class="card-title">Recipe Name</p>
+        <p class="recipe-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat..</p>
       </div>
       <div class="card-action">
         <a class="recipe-link" href="#">See Recipe</a>
@@ -107,6 +114,7 @@
     </div>
   </div>
 
+  <!--recipe card 5-->
   <div id="recipe-5" class="col s12 m2">
     <div class="card">
       <div class="card-image">
@@ -114,7 +122,8 @@
         <span class="card-title">Card Title</span>
       </div>
       <div class="card-content">
-        <p>I am a very use effectively.</p>
+        <p class="card-title">Recipe Name</p>
+        <p class="recipe-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       </div>
       <div class="card-action">
         <a class="recipe-link" href="#">See Recipe</a>
