--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <li>
             <a href="favorites.html"
               ><i class="material-icons link-icon">history</i
-              ><span>Past Searches</span></a
+              ><span>Previous Search</span></a
             >
           </li>
         </ul>
@@ -149,6 +149,93 @@
       </div>
     </section>
 
+    <section class="previous-search">
+      <h3 class="Name-Tag">[previous user movie]</h3>
+      <div class="row">
+        <!--recipe card 1-->
+        <div id="recipe-1" class="recipe col s12 m3">
+          <div class="card">
+            <div class="card-image">
+              <img class="recipe-image" src="" />
+            </div>
+            <div class="card-content">
+              <p class="card-title">[Recipe Name]</p>
+              <p class="recipe-description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat.
+              </p>
+            </div>
+            <div class="card-action">
+              <a class="recipe-link" href="#">See Recipe</a>
+            </div>
+          </div>
+        </div>
+
+        <!--recipe card 2-->
+        <div id="recipe-2" class="recipe col s12 m3">
+          <div class="card">
+            <div class="card-image">
+              <img class="recipe-image" src="" />
+            </div>
+            <div class="card-content">
+              <p class="card-title">[Recipe Name]</p>
+              <p class="recipe-description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat.
+              </p>
+            </div>
+            <div class="card-action">
+              <a class="recipe-link" href="#">See Recipe</a>
+            </div>
+          </div>
+        </div>
+
+        <!--recipe card 3-->
+        <div id="recipe-3" class="recipe col s12 m3">
+          <div class="card">
+            <div class="card-image">
+              <img class="recipe-image" src="" />
+            </div>
+            <div class="card-content">
+              <p class="card-title">[Recipe Name]</p>
+              <p class="recipe-description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat.
+              </p>
+            </div>
+            <div class="card-action">
+              <a class="recipe-link" href="#">See Recipe</a>
+            </div>
+          </div>
+        </div>
+
+        <!--recipe card 4-->
+        <div id="recipe-4" class="recipe col s12 m3">
+          <div class="card">
+            <div class="card-image">
+              <img class="recipe-image" src="" />
+            </div>
+            <div class="card-content">
+              <p class="card-title">[Recipe Name]</p>
+              <p class="recipe-description">
+                dunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                commodo consequat..
+              </p>
+            </div>
+            <div class="card-action">
+              <a class="recipe-link" href="#">See Recipe</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!--  Scripts-->
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
