Changed async method to fetch

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ git<!DOCTYPE html>
             </div>
           </div>
 
-          <button>Get your Meals</button>
+          <button class="submitBtn">Get your Meals</button>
         </form>
       </div>
     </section>
@@ -155,7 +155,7 @@ git<!DOCTYPE html>
 
     <section class="previous-search">
       <h3 class="Name-Tag">[previous user movie]</h3>
-      <div class="row recipes">
+      <div id="previousSearchHistory" class="row recipes">
         <!--recipe card 1-->
         <div id="recipe-1" class="recipe col s12 m3">
           <div class="card">
