Added name of movie to nameTag and updated previous search

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     </section>
 
     <section class="previous-search">
-      <h3 class="Name-Tag">[previous user movie]</h3>
+      <h3 class="Previous-Name-Tag">[previous user movies]</h3>
       <div id="previousSearchHistory" class="row recipes">
         <!--recipe card 1-->
         <div id="recipe-1" class="recipe col s12 m3">
