link previous search button to previous search section

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         >
         <ul id="nav-mobile" class="right hide-on-med-and-down">
           <li>
-            <a href="favorites.html"
+            <a href="#previous-name-tag"
               ><i class="material-icons link-icon">history</i
               ><span>Previous Search</span></a
             >
@@ -154,7 +154,9 @@
     </section>
 
     <section class="previous-search">
-      <h3 class="Previous-Name-Tag">[previous user movies]</h3>
+      <h3 class="Previous-Name-Tag" id="previous-name-tag">
+        [previous user movies]
+      </h3>
       <div id="previousSearchHistory" class="row recipes">
         <!--recipe card 1-->
         <div id="recipe-1" class="recipe col s12 m3">
