hide results before the user searches and added error message when movie is incorrect

--- a/index.html
+++ b/index.html
@@ -65,88 +65,91 @@
       </div>
     </section>
 
-    <section class="search-results">
-      <h3 class="Name-Tag">[user movie]</h3>
-      <div class="row recipes">
-        <!--recipe card 1-->
-        <div id="recipe-1" class="recipe col s12 m3">
-          <div class="card">
-            <div class="card-image">
-              <img class="recipe-image" src="" />
-            </div>
-            <div class="card-content">
-              <p class="card-title">[Recipe Name]</p>
-              <p class="recipe-description">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                nisi ut aliquip ex ea commodo consequat.
-              </p>
-            </div>
-            <div class="card-action">
-              <a class="recipe-link" href="#">See Recipe</a>
-            </div>
-          </div>
-        </div>
-
-        <!--recipe card 2-->
-        <div id="recipe-2" class="recipe col s12 m3">
-          <div class="card">
-            <div class="card-image">
-              <img class="recipe-image" src="" />
-            </div>
-            <div class="card-content">
-              <p class="card-title">[Recipe Name]</p>
-              <p class="recipe-description">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                nisi ut aliquip ex ea commodo consequat.
-              </p>
-            </div>
-            <div class="card-action">
-              <a class="recipe-link" href="#">See Recipe</a>
+    <section class="search-results hidden">
+      <h3 class="error-message">Movie not Found</h3>
+      <div class="actual-results">
+        <h3 class="Name-Tag">[user movie]</h3>
+        <div class="row recipes">
+          <!--recipe card 1-->
+          <div id="recipe-1" class="recipe col s12 m3">
+            <div class="card">
+              <div class="card-image">
+                <img class="recipe-image" src="" />
+              </div>
+              <div class="card-content">
+                <p class="card-title">[Recipe Name]</p>
+                <p class="recipe-description">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                  laboris nisi ut aliquip ex ea commodo consequat.
+                </p>
+              </div>
+              <div class="card-action">
+                <a class="recipe-link" href="#">See Recipe</a>
+              </div>
             </div>
           </div>
-        </div>
 
-        <!--recipe card 3-->
-        <div id="recipe-3" class="recipe col s12 m3">
-          <div class="card">
-            <div class="card-image">
-              <img class="recipe-image" src="" />
-            </div>
-            <div class="card-content">
-              <p class="card-title">[Recipe Name]</p>
-              <p class="recipe-description">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                nisi ut aliquip ex ea commodo consequat.
-              </p>
-            </div>
-            <div class="card-action">
-              <a class="recipe-link" href="#">See Recipe</a>
+          <!--recipe card 2-->
+          <div id="recipe-2" class="recipe col s12 m3">
+            <div class="card">
+              <div class="card-image">
+                <img class="recipe-image" src="" />
+              </div>
+              <div class="card-content">
+                <p class="card-title">[Recipe Name]</p>
+                <p class="recipe-description">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                  laboris nisi ut aliquip ex ea commodo consequat.
+                </p>
+              </div>
+              <div class="card-action">
+                <a class="recipe-link" href="#">See Recipe</a>
+              </div>
             </div>
           </div>
-        </div>
 
-        <!--recipe card 4-->
-        <div id="recipe-4" class="recipe col s12 m3">
-          <div class="card">
-            <div class="card-image">
-              <img class="recipe-image" src="" />
+          <!--recipe card 3-->
+          <div id="recipe-3" class="recipe col s12 m3">
+            <div class="card">
+              <div class="card-image">
+                <img class="recipe-image" src="" />
+              </div>
+              <div class="card-content">
+                <p class="card-title">[Recipe Name]</p>
+                <p class="recipe-description">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                  laboris nisi ut aliquip ex ea commodo consequat.
+                </p>
+              </div>
+              <div class="card-action">
+                <a class="recipe-link" href="#">See Recipe</a>
+              </div>
             </div>
-            <div class="card-content">
-              <p class="card-title">[Recipe Name]</p>
-              <p class="recipe-description">
-                dunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                commodo consequat..
-              </p>
-            </div>
-            <div class="card-action">
-              <a class="recipe-link" href="#">See Recipe</a>
+          </div>
+
+          <!--recipe card 4-->
+          <div id="recipe-4" class="recipe col s12 m3">
+            <div class="card">
+              <div class="card-image">
+                <img class="recipe-image" src="" />
+              </div>
+              <div class="card-content">
+                <p class="card-title">[Recipe Name]</p>
+                <p class="recipe-description">
+                  dunt ut labore et dolore magna aliqua. Ut enim ad minim
+                  veniam, quis nostrud exercitation ullamco laboris nisi ut
+                  aliquip ex ea commodo consequat..
+                </p>
+              </div>
+              <div class="card-action">
+                <a class="recipe-link" href="#">See Recipe</a>
+              </div>
             </div>
           </div>
         </div>
