added styles to previous search

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
     <section class="previous-search">
       <h3 class="Previous-Name-Tag" id="previous-name-tag">
-        [previous user movies]
+        Previous Searches
       </h3>
       <div id="previousSearchHistory" class="row recipes">
         <!--recipe card 1-->
@@ -245,6 +245,7 @@
         </div>
       </div>
     </section>
+
     <!--  Scripts-->
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
